feat: basic mobile layout

--- a/src/template.html
+++ b/src/template.html
@@ -3,7 +3,44 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <title>Homepage</title>
   </head>
-  <body></body>
+  <body>
+    <header>
+      <div class="image-container">
+        <img src="imgs/originalMe.png" alt="" />
+        <div class="image-text">Wesley Klaassen</div>
+      </div>
+      <div class="aboutMe">
+        <div class="title">About me</div>
+        Lorem, ipsum dolor sit amet consectetur adipisicing elit. Quos,
+        recusandae accusantium minus temporibus autem ullam atque rem architecto
+        voluptas in dolor minima inventore debitis suscipit reprehenderit itaque
+        optio odit reiciendis.
+        <div class="icons"></div>
+      </div>
+    </header>
+    <main>
+      <div class="title">My work</div>
+      <div class="projects">
+        <div class="project"></div>
+        <div class="project"></div>
+        <div class="project"></div>
+        <div class="project"></div>
+        <div class="project"></div>
+        <div class="project"></div>
+      </div>
+    </main>
+    <footer>
+      <div class="title">Contact me</div>
+      Lorem ipsum dolor sit, amet consectetur adipisicing elit. Sed voluptatibus
+      iusto deserunt, facere nemo odit earum dignissimos incidunt blanditiis id
+      possimus perspiciatis consequuntur exercitationem reiciendis harum
+      suscipit quae esse quos?
+      <div class="icons"></div>
+      <div class="image-container">
+        <img src="imgs/originalMe.png" alt="" />
+      </div>
+    </footer>
+  </body>
 </html>
