feat: header card text is wrapping

--- a/src/template.html
+++ b/src/template.html
@@ -20,21 +20,19 @@
 
           <div class="image-text">Wesley Klaassen</div>
         </div>
-        <div class="headerTablet">
-          <div class="title about">About me</div>
-          <div class="text">
-            Lorem, ipsum dolor sit amet consectetur adipisicing elit. Quos,
-            recusandae accusantium minus temporibus autem ullam atque rem
-            architecto voluptas in dolor minima inventore debitis suscipit
-            reprehenderit itaque optio odit reiciendis. Lorem ipsum dolor sit
-            amet consectetur adipisicing elit. Qui molestias beatae alias
-            dolorem explicabo necessitatibus eveniet, quis magnam molestiae
-            ullam quam ad ut perferendis, soluta, sit deserunt laborum culpa.
-            Aliquid? Lorem ipsum dolor sit amet consectetur adipisicing elit.
-            Assumenda, cupiditate similique fugit eligendi ducimus impedit,
-            deleniti facere totam natus in dolor, unde illo sapiente? Veritatis
-            quaerat inventore placeat consectetur illum.
-          </div>
+        <div class="title about">About me</div>
+        <div class="text">
+          Lorem, ipsum dolor sit amet consectetur adipisicing elit. Quos,
+          recusandae accusantium minus temporibus autem ullam atque rem
+          architecto voluptas in dolor minima inventore debitis suscipit
+          reprehenderit itaque optio odit reiciendis. Lorem ipsum dolor sit amet
+          consectetur adipisicing elit. Qui molestias beatae alias dolorem
+          explicabo necessitatibus eveniet, quis magnam molestiae ullam quam ad
+          ut perferendis, soluta, sit deserunt laborum culpa. Aliquid? Lorem
+          ipsum dolor sit amet consectetur adipisicing elit. Assumenda,
+          cupiditate similique fugit eligendi ducimus impedit, deleniti facere
+          totam natus in dolor, unde illo sapiente? Veritatis quaerat inventore
+          placeat consectetur illum.
         </div>
       </div>
       <div class="icons header">
