feat: header wrapping with lifted img

--- a/src/template.html
+++ b/src/template.html
@@ -18,10 +18,10 @@
             <img src="imgs/originalMe.png" alt="Responsive Image" />
           </picture>
 
-          <div class="image-text">Wesley Klaassen</div>
+          <h1 class="image-text">Wesley Klaassen</h1>
         </div>
-        <div class="title about">About me</div>
-        <div class="text">
+        <h2 class="title about">About me</h2>
+        <p class="text">
           Lorem, ipsum dolor sit amet consectetur adipisicing elit. Quos,
           recusandae accusantium minus temporibus autem ullam atque rem
           architecto voluptas in dolor minima inventore debitis suscipit
@@ -33,7 +33,7 @@
           cupiditate similique fugit eligendi ducimus impedit, deleniti facere
           totam natus in dolor, unde illo sapiente? Veritatis quaerat inventore
           placeat consectetur illum.
-        </div>
+        </p>
       </div>
       <div class="icons header">
         <svg viewBox="0 0 128 128" width="25" height="25" fill="black">
