feat: finish tablet view

--- a/src/template.html
+++ b/src/template.html
@@ -331,11 +331,13 @@
           </svg>
         </div>
       </div>
-      <img
-        src="imgs/originalMe_fu0o22_c_scale,w_369.png"
-        alt=""
-        class="my-image"
-      />
+      <div class="footerImg">
+        <img
+          src="imgs/originalMe_fu0o22_c_scale,w_369.png"
+          alt=""
+          class="my-image"
+        />
+      </div>
     </footer>
   </body>
 </html>
